nav fixed on tablet mode

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -1904,7 +1904,7 @@ section, article {
 		display: none;
 	}
 
-	@media screen and (max-width: 960px) {
+	@media screen and (max-width: 736px) {
 
 		/* Basic */
 
